--- a/views/item.erb
+++ b/views/item.erb
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-8">
-            <i class="fas fa-handshake"></i>
+            <i class="fas fa-handshake fa-5x"></i>
             
         
                 <h2> <%= @item[:item_name] %>
