working on customer_input

--- a/views/item.erb
+++ b/views/item.erb
@@ -30,7 +30,7 @@
 
                 <h3>Do You Want to Purchase?</h3>
 
-                <a class="btn btn-primary btn-lg" href="/customer_input" role="button">Buy Now</a>
+                <a class="btn btn-primary btn-lg" href="/items/<%= @item[:id] %>/customer_input/new" role="button">Buy Now</a>
 
             </div>
         </div>
