--- a/views/customer_input.erb
+++ b/views/customer_input.erb
@@ -1,52 +1,31 @@
-#             <title>Customer Info</title>
-#   </head>
-#   <body>
-#     <nav class="navbar navbar-expand-lg navbar-light">
-       
-#     </nav>
-#     <div class="container">
-#         <div class="row">
-#             <div class="col-sm-8">
-#             <i class="fas fa-handshake fa-5x"></i>
-            
-        
-#                 <h2> <%= @item[:item_name] %>
-#                 </h2>
 
-#                 <p> Description: <%= @item[:description] %></p>
 
-#                 <p> Condition: <%= @item[:condition] %></p>
+<h1>Pick Up location:  228 N. Geneva Ave., Elmhurst IL</h1>
+<break>
+<h2> <%= @item[:item_name] %> </h2>
+<p> Price: <%= @item[:price] %></p>
 
-#                 <p> Category: <%= @item[:item_type] %></p>
 
-#                 <p> Price: <%= @item[:price] %></p>
-#             </div>
-#         </div>
-#     </div>
 
-#     <form action="/events/<%= @event[:id] %>/customer_input/create">
-#     <div class="form-group">
-#     <label>Name</label>
-#     <textarea class="form-control" rows="1" name="customer_name"></textarea>
-#     </div>
-    
-#     <div class="form-group">
-#     <label>Phone Number</label>
-#     <textarea class="form-control" rows="1" name="customer_phone_number"></textarea>
-#     </div>
 
-#      <div class="form-group">
-#     <label>Email address</label>
-#     <input type="email" class="form-control" placeholder="name@example.com" name="customer_e_mail">
-#     </div>
 
-    
-    
-#     <div class="form-group">
-#     <label>Comments/Desired Pick-up times</label>
-#     <textarea class="form-control" rows="3" name="desired_pick_up_times"></textarea>
-#     </div>
-#   <button type="submit" class="btn btn-primary">Submit</button>
-# </form>
-
-hello world
+<form>
+  
+  
+  <div class="form-group">
+    <label>Your name</label>
+    <input type="text" class="form-control">
+  </div>
+   <div class="form-group">
+    <label>Phone Number</label>
+    <input type="text" class="form-control">
+  </div>
+  <div class="form-group">
+    <label>Email address</label>
+    <input type="email" class="form-control" placeholder="name@example.com">
+  </div>
+  <div class="form-group">
+    <label>Desired Pick-up times/comments</label>
+    <textarea class="form-control" rows="3"></textarea>
+  </div>
+</form>
