--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -3,11 +3,15 @@
 <form action="/users/create" method="post">
   <div class="form-group">
     <label>Your name</label>
-    <input type="text" class="form-control" name="name">
+    <input type="text" class="form-control" name="customer_name">
   </div>
   <div class="form-group">
+    <label>phone number</label>
+    <input type="text" class="form-control" name="customer_phone_number">
+    </div>
+  <div class="form-group">
     <label>Email address</label>
-    <input type="email" class="form-control" placeholder="name@example.com" name="email">
+    <input type="email" class="form-control" placeholder="name@example.com" name="customer_e_mail">
   </div>
   <div class="form-group">
     <label>Password</label>
