not sure i should push

--- a/views/create_user.erb
+++ b/views/create_user.erb
@@ -1,2 +1,2 @@
-<h1>Thanks for your purchase!</h1>
+<h1>Thanks for signing up!</h1>
 <p><a href="/items" class="btn btn-primary">Back to items</a></p>
