--- a/views/home.erb
+++ b/views/home.erb
@@ -1,12 +1,12 @@
 <head>
-                <title>Rasmussen Used Goods</title>
+                <title>Elmhurst Used Goods</title>
     </head>
   <body>
    
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <div class="col-sm-12 text-center">
-                    <h1 class="display-1">The Elmhurst, Illinois Rasmussen Used Goods Emporium</h1 class="display-1">
+                    <h1 class="display-1">The Elmhurst Used Goods Emporium</h1 class="display-1">
                 </div>
             </div>
         </div>
