--- a/views/customer_input.erb
+++ b/views/customer_input.erb
@@ -1,6 +1,6 @@
 
 
-<h1>Pick Up location:  228 N. Geneva Ave., Elmhurst IL</h1>
+<h1>Pick up location: <%= @item[:location] %></h1>
 <break>
 <h2> <%= @item[:item_name] %> </h2>
 <p> Price: <%= @item[:price] %></p>
