--- a/views/home.erb
+++ b/views/home.erb
@@ -35,6 +35,7 @@
                         <h5>See Items For Sale</h5>
                         
                         <a class="btn btn-primary btn-lg" href="/items" role="button">See All Items</a>
+                        <a class="btn btn-primary btn-lg" href="/places" role="button">See Items By Location</a>
                     </div>   
 
                 </div>
