--- a/views/items.erb
+++ b/views/items.erb
@@ -3,5 +3,6 @@
 <% for item in @items %>
     <p><a href="/items/<%= item[:id] %>"><%= item[:item_name] %></a></p>
     <p><%= item[:description] %></p>
+    <p><%= item[:location] %></p>
 <% end %>
 
