--- a/views/customer_input.erb
+++ b/views/customer_input.erb
@@ -12,20 +12,9 @@
 <form action="/items/<%= @item[:id] %>/customer_input/create">
   
   
+  
   <div class="form-group">
-    <label>name</label>
-    <input type="text" class="form-control" name="customer_name">
-  </div>
-   <div class="form-group">
-    <label>phone number</label>
-    <input type="text" class="form-control" name="customer_phone_number">
-  </div>
-  <div class="form-group">
-    <label>e-mail</label>
-    <input type="email" class="form-control" placeholder="name@example.com" name="customer_e_mail">
-  </div>
-  <div class="form-group">
-    <label>desired pick-up time_comments</label>
+    <label>desired pick-up time/comments</label>
     <textarea class="form-control" rows="3" name="desired_pick_up_times"></textarea>
     
   </div>
