--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,36 +19,45 @@
     <link rel="stylesheet" href="/styles.css">
 
     
-     <title>Used Good</title>
+     <title>Used Goods</title>
   </head>
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="/">Home</a>
+            <a class="navbar-brand" href="/">Elmhurst Used Goods</a>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+            </ul>
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="/items">Items</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users/new">Sign Up</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/logins/new">Sign In</a>
-                </li>
             </ul>
-            <% if @current_user %>
-                <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto">
+                <% if @current_user %>
                     <li class="navbar-text">
-                        Logged in as <%= @current_user[:name] %>
+                        Logged in as <%= @current_user[:customer_name] %>
                     </li>
                     <li class="nav-item">
                         <a href="/logout" class="nav-link">Logout</a>
                     </li>
-                </ul>
-            <% end %>
+                <% else %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/new">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logins/new">Sign In</a>
+                    </li>
+                <% end %>
+            </ul>
         </div>
     </nav>
+
+
+    
 
     <div class="container mt-5">
 
