--- a/views/customer_input.erb
+++ b/views/customer_input.erb
@@ -9,7 +9,7 @@
 
 
 
-<form action="/items/<%= @item[:id] %>/customer_input/create">
+<form action="/items/<%= @item[:id] %>/customer_input/create" method="post">
   
   
   
