--- a/views/create_customer_input.erb
+++ b/views/create_customer_input.erb
@@ -1,3 +1,3 @@
   
 <h1>Thanks for your purchase!</h1>
-<p><a href="/items/" class="btn btn-primary"><Back to Items</a></p>
+<p><a href="/items/" class="btn btn-primary">Back to Items</a></p>
