--- a/views/purchases.erb
+++ b/views/purchases.erb
@@ -9,16 +9,27 @@
             <!-- </div> -->
         <%# end %>
 
+<% for user in @users %>
+            <div class="media">
+                    <ul> Name: <%= user[:customer_name] %> </ul>
+                   <ul> Phone Number: <%= user[:customer_phone_number] %> </ul>
+                    <ul> E-mail: <%= user[:customer_email] %> </ul>  
+                    <ul> Customer id: <%= user[:id] %> </ul> 
+
+            </div>
+            
+        <% end %>
+
 <% for customer in @customer %>
             <div class="media">
                    <ul> Name: <%= customer[:customer_name] %> </ul>
                    <ul> Phone Number: <%= customer[:customer_phone_number] %> </ul>
                     <ul> E-mail: <%= customer[:customer_e_mail] %> </ul>
                     <ul> Pick/up Time: <%= customer[:desired_pick_up_times] %> </ul>
-                    <ul> Customer ID: <%= customer[:item_id] %> </ul>
-                    <ul> Item Name: <%= @items_table.where(id: customer[:item_id]).to_a[0][:item_name] %> </ul>
-                    <ul> Item Price: <%= @items_table.where(id: customer[:item_id]).to_a[0][:price] %> </ul>
-                    <ul> Item ID: <%= @items_table.where(id: customer[:item_id]).to_a[0][:id] %> </ul>
+                    <ul> Customer ID: <%= customer[:user_id] %> </ul>
+                    <ul> item Name: <%= @items_table.where(id: customer[:items_id]).to_a[0][:item_name] %> </ul>
+                    <ul> item Price: <%= @items_table.where(id: customer[:items_id]).to_a[0][:price] %> </ul>
+                    <ul> item ID: <%= @items_table.where(id: customer[:items_id]).to_a[0][:id] %> </ul>
                 </div>
             </div>
         <% end %>
