--- a/views/create_login_failed.erb
+++ b/views/create_login_failed.erb
@@ -1,2 +1,2 @@
-<h1>Nope.</h1>
+<h1>Sorry.  You might need to sign up first.</h1>
 <p><a href="/items" class="btn btn-primary">Go Back to items</a></p>
